soapybladerf (0.1.1) unstable; urgency=low

  * Fix find function serial string to use null terminator
  * Support use of BLADERF_META_FLAG_TX_UPDATE_TIMESTAMP flag
  * Remove BLADERF_META_FLAG_TX_BURST_END padding (2015.07)

 -- Josh Blum <josh@pothosware.com>  Sun, 02 Aug 2015 17:03:23 -0700

soapybladerf (0.1.0) unstable; urgency=low

  * Release 0.1.0 (2015-07-13)

 -- Josh Blum <josh@pothosware.com>  Mon, 13 Jul 2015 22:02:57 -0700